--- a/Task_2.css
+++ b/Task_2.css
@@ -2,6 +2,11 @@ body {
   margin: 0;
   padding: 0;
 }
+body {
+  background-image: url('https://i.ibb.co/sCTLxWy/bg.jpg');
+  background-repeat: no-repeat;      
+  background-size: cover;
+}
 .container {
   max-width: 1200px;
   margin: 0 auto;
